# lwr-test

./: .gitmodules  README.md
lwr_descartes/full_lwr_moveit/: .setup_assistant  CMakeLists.txt  package.xml
lwr_descartes/full_lwr_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  full_lwr_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
lwr_descartes/lwr_descartes/: CMakeLists.txt  package.xml
lwr_descartes/lwr_descartes_demo/: CMakeLists.txt  package.xml
lwr_descartes/lwr_descartes_demo/include/: simple_message_defs.h
lwr_descartes/lwr_descartes_demo/launch/: demo.launch  sm_client.launch  sm_server.launch
lwr_descartes/lwr_descartes_demo/src/: demo.cpp  sm_client_demo.cpp  sm_server_demo.cpp
lwr_descartes/lwr_moveit/: .setup_assistant  package.xml
lwr_descartes/lwr_moveit/config/: controllers.yaml  full_lwr.srdf  lwr_robot.srdf
lwr_descartes/lwr_moveit/launch/: full_lwr_moveit_controller_manager.launch.xml  lwr_robot_moveit_controller_manager.launch.xml  move_group.launch  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
lwr_descartes/lwr_robot/: CMakeLists.txt  README.md  package.xml
lwr_descartes/lwr_robot/config/: joint_names.yaml  t1_joint_limits.yaml
lwr_descartes/lwr_robot/launch/: lwr.launch
lwr_descartes/lwr_robot/models/big_box/: model.config  model.sdf
lwr_descartes/lwr_robot/models/full_lwr/: full_lwr.urdf.xacro  model.config  model.sdf
lwr_descartes/lwr_robot/models/lwr_robot/: lwr_robot.urdf.xacro  model.config  model.sdf
lwr_descartes/lwr_robot/models/robotiq_hand/: model.config  model.sdf  robotiq_hand.urdf.xacro
lwr_descartes/lwr_robot/models/small_box/: model.config  model.sdf
lwr_descartes/lwr_robot/scripts/: update_model_path.bash  update_model_sdf.bash
lwr_descartes/lwr_robot/world/: simple.world
ros_control/transmission_interface/: CMakeLists.txt  ros_control_plugins.xml
ros_control/transmission_interface/include/transmission_interface/: adaptive_synergy_transmission_loader.cpp  adaptive_synergy_transmission_loader.h  transmission_info.h  transmission_loader.h
ros_control/transmission_interface/src/: transmission_loader.cpp  transmission_parser.cpp
ros_control/transmission_interface/test/: adaptive_synergy_transmission_loader_test.cpp  adaptive_synergy_transmission_test.cpp
ros_control/transmission_interface/test/urdf/: parser_test_invalid.urdf  parser_test_valid.urdf
