<?xml version="1.0"?>
<package>
  <name>lwr_descartes</name>
  <version>0.0.0</version>
  <description>The lwr_descartes package</description>

  <maintainer email="pavapil@gmail.com">Pavel-P</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>kuka_lwr</run_depend>
  <run_depend>lwr_descartes_demo</run_depend>
  <run_depend>lwr_robot</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
