<?xml version="1.0"?>
<package>
  <name>lwr_robot</name>
  <version>0.0.0</version>
  <description>The lwr_robot package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="pavapil@gmail.com">Pavel-P</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>kuka_lwr</run_depend>

  <export>
  </export>

</package>
